# Proyecto-Pokemonsters

./: .gitignore  CMakeLists.txt  README.md  SISTEMA_COMBATE_SECUENCIADO.md
.github/workflows/: publish.yml
include/: AudioManager.h  BattleUI.h  CharacterSelect.h  Game.cpp  Game.h  MenuScreen.h  Move.h  Pokemonster.h  WinnerScreen.h
scripts/: copy_sfml_dlls.ps1
src/: AudioManager.cpp  BattleUI.cpp  CharacterSelect.cpp  Game.cpp  Game_old.cpp  MenuScreen.cpp  Move.cpp  Pokemonster.cpp  WinnerScreen.cpp  main.cpp
